--- a/templates/news/category_list.html
+++ b/templates/news/category_list.html
@@ -2,7 +2,7 @@
 
 {% load custom_filters %}
 {% load custom_tags %}
-
+{% load cache %}
 {% block title %}
 News
 
@@ -41,11 +41,15 @@ News
            <tr>
 
                <td>{{ post.author.author }}</td>
+               {%cache 20 link1 %}
                <td><a href="{% url 'post_detail' post.id %}"> {{ post.title|capfirst }} </a></td>
+               {% endcache %}
                <td>{{ post.content_of_article|truncatewords:20|capfirst }}</td>
                <td>
                    {% for category in post.categories.all %}
+                   {%cache 30 link2 %}
                     <a href = "{% url 'category_list' category.id %}">{{ category|capfirst }}</a>
+                   {% endcache %}
                    {% endfor %}
                </td>
            </tr>
