--- a/templates/news/category_list.html
+++ b/templates/news/category_list.html
@@ -1,4 +1,5 @@
 {% extends 'flatpages/default.html' %}
+{% load i18n %}
 
 {% load custom_filters %}
 {% load custom_tags %}
@@ -7,6 +8,8 @@
 News
 
 {% endblock title %}
+
+
 
 {% block content %}
     {% if not is_not_subscriber %}
@@ -26,15 +29,38 @@ News
 -->
 
 
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body>
+    <form action="{% url 'set_language' %}" method="POST"> {% csrf_token %}
+        <input type="hidden" name="next" value="{{ redirect_to }} ">
+
+        <select name="language" id="">
+            {% get_available_languages as LANGUAGES %}
+            {% get_language_info_list for LANGUAGES as languages %}
+            {% for language in languages %}
+
+                <option value="{{ language.code }}" {% if language.code == LANGUAGE_CODE %} selected {% endif %}>
+                    {{ language.name_local }} - {{ language.code }}
+                </option>
+            {% endfor %}
+        </select>
+        <input type="submit" value="set">
+    </form>
+
+
 
    <hr>
    {% if category_news_list %}
        <table class="table table-bordered table-striped table-hover">
            <thead>
-                   <td>Author</td>
-                   <td>Title</td>
-                   <td>Content</td>
-                   <td>Category</td>
+                   <td>{% trans 'Author' %}</td>
+                   <td>{% trans 'Title' %}</td>
+                   <td>{% trans 'Content' %}</td>
+                   <td>{% trans 'Category' %}</td>
            </thead>
            <tbody>
            {% for post in category_news_list %}
@@ -79,4 +105,6 @@ News
 
 {% endblock content %}
 
+</body>
+</html>
 
