tz and localization

--- a/templates/TEST_TEMPLATE.html
+++ b/templates/TEST_TEMPLATE.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 {% load i18n %}
+{% load tz %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -21,10 +22,24 @@
         </select>
         <input type="submit" value="set">
     </form>
-    {% for model in models %}
-        {{model.title}}
-        {{model.content_of_article}}
-    {% endfor %}
+
+    {% get_current_timezone as TIME_ZONE %}
+    <form action="" method="POST">
+        {% csrf_token %}
+        <label for="timezone">Time zone:</label>
+        <select name="timezone">
+            {% for tz in timezones %}
+            <option value="{{ tz }}"{% if tz == TIME_ZONE %} selected{% endif %}>{{ tz }}</option>
+            {% endfor %}
+        </select>
+        <input type="submit" value="Set">
+    </form>
+
+    {{ TIME_ZONE }}
+    {{ current_time|timezone:TIME_ZONE }} <!-- Отображаем время в выбранном часовом поясе  -->
+
+
+
 
 </body>
 </html>
