--- a/templates/posts.html
+++ b/templates/posts.html
@@ -1,5 +1,6 @@
 {% extends 'flatpages/default.html' %}
 {% load i18n %}
+{% load tz %}
 {% load custom_filters_app %}
 {% load custom_tags %}
 
@@ -28,6 +29,9 @@ Posts
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        body {background-color: {% if current_time.hour >= 19 or current_time.hour <= 7 %} darkcyan {% else %} powderblue {% endif %};}
+    </style>
 </head>
 <body>
     <form action="{% url 'set_language' %}" method="POST"> {% csrf_token %}
@@ -46,7 +50,20 @@ Posts
         <input type="submit" value="set">
     </form>
 
+    {% get_current_timezone as TIME_ZONE %}
+    <form action="" method="POST">
+        {% csrf_token %}
+        <label for="timezone">Time zone:</label>
+        <select name="timezone">
+            {% for tz in timezones %}
+            <option value="{{ tz }}"{% if tz == TIME_ZONE %} selected{% endif %}>{{ tz }}</option>
+            {% endfor %}
+        </select>
+        <input type="submit" value="Set">
+    </form>
 
+    {{ TIME_ZONE }}
+    {{ current_time|timezone:TIME_ZONE }}
 
 
    <hr>
